style/index.css
/* Add CSS styling here */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

* {
    background-color: rgb(104, 0, 145);
    color: white;
    font-size: 62.5%;
    width: 80vw;
    text-align: center;
    font-family: 'Raleway', sans-serif;
}

header{
    height:20vh;
    border: 1px black solid;
    margin: 0 5rem;
    background-color: black;
    font-family: 'Satisfy', cursive; 

}

nav{
    border: 1px black solid;
    display: flex;
    justify-content: flex-end;
    background-color: black;
} 

header h1{
    border: 1px black solid;
    font-size: 3rem;
    padding: 2rem;
    width: 30%;
    float: left;
    background-color: black;
    font-family: 'Satisfy', cursive;
}
button{
    background-color: rgb(222, 139, 255);
    color: rgb(104, 0, 145);
    border:none;
    border-radius:1rem;
    padding:1rem;
    width: 5rem;
    margin: 1%;
    font-size: 1rem;

    }

.main {
    margin: 0 auto;
    width: 45rem;
    height: auto;
}

.container{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    width: 15rem;
    height: 15rem;
}

